clusters/home/it-tools/it-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels: { app: it-tools }
spec:
  replicas: 1
  selector:
    matchLabels: { app: it-tools }
  template:
    metadata:
      labels: { app: it-tools }
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933
          ports:
            - { name: http, containerPort: 80 }
          readinessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 128Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector: { app: it-tools }
  ports:
    - { name: http, port: 80, targetPort: http }
